--- a/css/monkey.css
+++ b/css/monkey.css
@@ -2,11 +2,27 @@ html {
   background: url(../images/spice-girls.jpg) no-repeat top left;
 }
 
-#monkey {
-  position: absolute;
-  top: 550px;
-  right: 120px;
-}
+  #monkey {
+    position: absolute;
+    top: 550px;
+    right: 120px;
+  }
+
 
 /* Write your solution here */
+@media only screen and (max-width: 1170px), (min-width: 406px){
+  #monkey{
+    position: absolute;
+    top: 0;
+    right: 600px;
+  }
+}
+@media screen and (max-width: 405px), (min-width: 1171px) {
+  #monkey{
+    position: absolute;
+    top: 550px;
+    right: 120px;
+    
+  }
+}
 
