--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -9,4 +9,12 @@ html {
 }
 
 /* Write your solution here */
+@media screen and (max-width: 1000px){
+  #ostrich{
+    position: absolute;
+    top: 0;
+
+    
+  }
+}
 
