--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -19,4 +19,9 @@ html {
 }
 
 /* Write your solution here */
-
+@media screen and (max-width: 1090px) and (min-width: 642px) {
+#dolphin {
+  top: 0px;
+transform: rotate(.75turn);
+}
+}
